account_activation reset_email reset_password

--- a/app/views/user_mailer/send_email_confirmation.html.erb
+++ b/app/views/user_mailer/send_email_confirmation.html.erb
@@ -1,14 +1,8 @@
 <p><%= @user.name %>様</p>
 
-<p>
-Edibleをご利用いただきありがとうございます。
-<br/>
-下記のリンクをクリックしアカウントを有効化してください。
-<br/>
-アカウント登録やメールアドレスの変更を行なっていない場合は、
-このメールを無視してください。
-<br/>
-＊このURLの有効期限は24時間です。
-</p>
+<p>Edibleをご利用いただきありがとうございます。</p>
+<p>下記のリンクをクリックして、アカウントを有効化してください。</p>
+<p>アカウント登録を行なっていない場合は、このメールを無視してください。</p>
+<p>＊このURLの有効期限は24時間です。</p>
 
 <%= link_to "アカウントを有効化する", confirm_email_api_v1_users_url(token: @user.confirmation_token) %>
