--- a/app/views/user_mailer/send_email_confirmation.text.erb
+++ b/app/views/user_mailer/send_email_confirmation.text.erb
@@ -2,8 +2,8 @@
 
 Edibleをご利用いただきありがとうございます。
 
-下記のリンクをクリックしアカウントを有効化してください。
-アカウント登録やメールアドレスの変更を行なっていない場合は、
-このメールを無視してください。
+下記のリンクをクリックして、アカウントを有効化してください。
+アカウント登録を行なっていない場合は、このメールを無視してください。
 ＊このURLの有効期限は24時間です。
+
 <%= confirm_email_api_v1_users_url(token: @user.confirmation_token) %>
