Refactor Settings for readability and conciseness

--- a/app/views/user_mailer/send_contact_email.html.erb
+++ b/app/views/user_mailer/send_contact_email.html.erb
@@ -1,6 +1,15 @@
-<p><%= @name %>様</p>
-
-<p>お問い合わせありがとうございます。</p>
-<p>お問い合わせ内容：</p>
-<p><%= @contents %></p>
-<p>担当者よりご連絡いたします。</p>
+<!DOCTYPE html>
+<html>
+<head>
+  <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
+</head>
+<body>
+  <p><%= @name %>様</p>
+  <br>
+  <p>お問い合わせありがとうございます。</p>
+  <p>お問い合わせ内容：</p>
+  <p><%= @contents %></p>
+  <br>
+  <p>担当者よりご連絡いたします。</p>
+</body>
+</html>
