--- a/app/views/user_mailer/send_password_reset.html.erb
+++ b/app/views/user_mailer/send_password_reset.html.erb
@@ -1,6 +1,16 @@
-<p><%= @user.name %>様</p>
-
-<p>Edibleをご利用いただきありがとうございます。</p>
-<p>以下のリンクをクリックして、パスワードを再設定してください。</p>
-<%= link_to 'パスワードを再設定する', "http://localhost:8080/auth/reset_password_confirmation?token=#{@token}" %>
-<p>このメールに心当たりがない場合、このメールを無視してください。</p>
+<!DOCTYPE html>
+<html>
+<head>
+  <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
+</head>
+<body>
+  <p><%= @user.name %>様</p>
+  <br>
+  <p>Edibleをご利用いただきありがとうございます。</p>
+  <br>
+  <p>以下のリンクをクリックして、パスワードを再設定してください。</p>
+  <%= link_to 'パスワードを再設定する', "http://localhost:8080/auth/reset_password_confirmation?token=#{@token}" %>
+  <br>
+  <p>このメールに心当たりがない場合、このメールを無視してください。</p>
+</body>
+</html>
