--- a/app/views/user_mailer/send_password_reset_confirmation.html.erb
+++ b/app/views/user_mailer/send_password_reset_confirmation.html.erb
@@ -1,4 +1,13 @@
-<p><%= @user.name %>様</p>
-
-<p>Edibleをご利用いただきありがとうございます。</p>
-<p>パスワードが変更されました。</p>
+<!DOCTYPE html>
+<html>
+<head>
+  <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
+</head>
+<body>
+  <p><%= @user.name %>様</p>
+  <br>
+  <p>Edibleをご利用いただきありがとうございます。</p>
+  <br>
+  <p>パスワードが変更されました。</p>
+</body>
+</html>
