--- a/app/views/users/change_email_success.html.erb
+++ b/app/views/users/change_email_success.html.erb
@@ -1,2 +1,10 @@
-<p>メールアドレスが変更されました。</p>
-<p>一旦ログアウトして、再度ログインしてください。</p>
+<!DOCTYPE html>
+<html>
+<head>
+  <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
+</head>
+<body>
+  <p>メールアドレスが変更されました。</p>
+  <p>一旦ログアウトして、再度ログインしてください。</p>
+</body>
+</html>
