--- a/app/views/user_mailer/send_email_confirmation.html.erb
+++ b/app/views/user_mailer/send_email_confirmation.html.erb
@@ -1,8 +1,17 @@
-<p><%= @user.name %>様</p>
-
-<p>Edibleをご利用いただきありがとうございます。</p>
-<p>下記のリンクをクリックして、アカウントを有効化してください。</p>
-<p>アカウント登録を行なっていない場合は、このメールを無視してください。</p>
-<p>＊このURLの有効期限は24時間です。</p>
-
-<%= link_to "アカウントを有効化する", confirm_email_api_v1_users_url(token: @user.confirmation_token) %>
+<!DOCTYPE html>
+<html>
+<head>
+  <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
+</head>
+<body>
+  <p><%= @user.name %>様</p>
+  <br>
+  <p>Edibleをご利用いただきありがとうございます。</p>
+  <br>
+  <p>下記のリンクをクリックして、アカウントを有効化してください。</p>
+  <p>アカウント登録を行なっていない場合は、このメールを無視してください。</p>
+  <p>＊このURLの有効期限は24時間です。</p>
+  <br>
+  <%= link_to "アカウントを有効化する", confirm_email_api_v1_users_url(token: @user.confirmation_token) %>
+</body>
+</html>
