--- a/app/views/users/change_email_error_invalid.html.erb
+++ b/app/views/users/change_email_error_invalid.html.erb
@@ -1,1 +1,9 @@
-<p>こちらのリンクは有効ではありません。</p>
+<!DOCTYPE html>
+<html>
+<head>
+  <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
+</head>
+<body>
+  <p>こちらのリンクは有効ではありません。</p>
+</body>
+</html>
