--- a/app/views/user_mailer/send_contact_email.html.erb
+++ b/app/views/user_mailer/send_contact_email.html.erb
@@ -8,7 +8,7 @@
   <br>
   <p>お問い合わせありがとうございます。</p>
   <p>お問い合わせ内容：</p>
-  <p><%= @contents %></p>
+  <p><%= @content %></p>
   <br>
   <p>担当者よりご連絡いたします。</p>
 </body>
